--- a/prototype/index.html
+++ b/prototype/index.html
@@ -46,7 +46,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <a class="navbar-brand js-scroll-trigger" href="index.html">
           <img src="img/logos/logosmall.png" alt />
         </a>
         <button
@@ -83,11 +83,11 @@
     <header class="masthead">
       <div class="container" id="logo">
         <div class="container-fluid">
-          <br /><br />
+          <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
           <div class="row justify-content-end">
             <div class="col-lg-4 box" id="login">
               <div class="card text-center">
-                <div class="card-header justify-content-end">
+                <!-- <div class="card-header justify-content-end">
                   <ul
                     class="nav nav-tabs card-header-tabs justify-content-end"
                     id="myTab"
@@ -118,8 +118,38 @@
                       >
                     </li>
                   </ul>
-                </div>
+                </div> -->
                 <div class="card-body">
+                  <ul
+                    class="nav nav-tabs nav-justified"
+                    id="myTab"
+                    role="tablist"
+                  >
+                    <li class="nav-item">
+                      <a
+                        class="nav-link active"
+                        id="home-tab"
+                        data-toggle="tab"
+                        href="#home"
+                        role="tab"
+                        aria-controls="home"
+                        aria-selected="true"
+                        >Customer</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a
+                        class="nav-link"
+                        id="profile-tab"
+                        data-toggle="tab"
+                        href="#profile"
+                        role="tab"
+                        aria-controls="profile"
+                        aria-selected="false"
+                        >Store</a
+                      >
+                    </li>
+                  </ul>
                   <div class="tab-content" id="myTabContent">
                     <div
                       class="tab-pane fade show active"
@@ -128,9 +158,9 @@
                       aria-labelledby="home-tab"
                     >
                       <div class="row container justify-content-between">
-                        <h4 class="float-left card-title mb-4 mt-1">Sign in</h4>
+                        <h4 class="float-left card-title mb-4 mt-1">Log in</h4>
                         <a
-                          href=""
+                          href="signup_user.html"
                           class="float-right btn btn-outline-primary mb-4 mt-1"
                           >Sign up</a
                         >
@@ -182,9 +212,9 @@
                       aria-labelledby="profile-tab"
                     >
                       <div class="row container justify-content-between">
-                        <h4 class="float-left card-title mb-4 mt-1">Sign in</h4>
+                        <h4 class="float-left card-title mb-4 mt-1">Log in</h4>
                         <a
-                          href=""
+                          href="signup_store.html"
                           class="float-right btn btn-outline-primary mb-4 mt-1"
                           >Sign up</a
                         >
@@ -234,7 +264,6 @@
               </div>
             </div>
           </div>
-          <br /><br /><br /><br /><br /><br /><br /><br />
           <br /><br /><br /><br /><br /><br /><br /><br />
         </div>
       </div>
@@ -322,6 +351,7 @@
 
     <!-- Contact -->
     <section class="page-section" id="contact">
+      <br /><br />
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
