checkbox for acknowledgement

--- a/prototype/signup_store.html
+++ b/prototype/signup_store.html
@@ -249,15 +249,13 @@
                 <i class="zmdi zmdi-card-membership"></i>
                 <select name="" id="" class="form-control">
                   <option value="monthly" class="option"
-                    >Monthly ($2/month)</option
-                  >
-                  <option value="yearly" class="option"
-                    >Yearly ($24/year)</option
+                    >Monthly ($5/month)</option
                   >
                 </select>
                 <i class="zmdi zmdi-chevron-down"></i>
               </div>
             </div>
+            <div class="form-col"></div>
           </div>
           <div class="form-row">
             <div class="form-col">
@@ -330,9 +328,13 @@
 
           <div class="form-row">
             <div class="form-col">
+              <!-- <div class="row"> -->
               <label for="">
+                <input type="checkbox" id="agreement-checkbox" />
                 <h5>I understand and agree with the terms and conditions.</h5>
               </label>
+              <!-- </div> -->
+
               <label for="">
                 <h4>E-SIGNATURE</h4>
               </label>
