--- a/prototype/index.html
+++ b/prototype/index.html
@@ -47,7 +47,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="index.html">
-          <img src="img/logos/logosmall.png" alt />
+          <img src="img/logo.png" alt />
         </a>
         <button
           class="navbar-toggler navbar-toggler-right"
