--- a/prototype/signup_store.html
+++ b/prototype/signup_store.html
@@ -72,7 +72,7 @@
           </div>
         </section>
 
-        <!-- Profile Section -->
+        <!-- Store Profile -->
         <h4></h4>
         <section>
           <h3>Store Profile</h3>
@@ -91,7 +91,7 @@
                 Authorized Person Name
               </label>
               <div class="form-holder">
-                <i class="zmdi zmdi-account-o"></i>
+                <i class="zmdi zmdi-account"></i>
                 <input type="text" class="form-control" required />
               </div>
             </div>
@@ -102,7 +102,7 @@
                 Telephone
               </label>
               <div class="form-holder">
-                <i class="zmdi zmdi-phone"></i>
+                <i class="zmdi zmdi-phone-ring"></i>
                 <input type="text" class="form-control" />
               </div>
             </div>
@@ -122,7 +122,7 @@
                 Fax
               </label>
               <div class="form-holder">
-                <i class="zmdi zmdi-phone"></i>
+                <i class="zmdi zmdi-print"></i>
                 <input type="text" class="form-control" />
               </div>
             </div>
@@ -162,7 +162,7 @@
           <div class="form-row">
             <div class="form-col">
               <label for="">
-                Building / House No. / Apartment
+                Building
               </label>
               <div class="form-holder">
                 <i class="zmdi zmdi-home"></i>
@@ -233,7 +233,64 @@
         <!-- Discount Type Section -->
         <h4></h4>
         <section>
-          <h3>Vendor Agreement</h3>
+          <h3>Discount Type</h3>        
+          <div class="form-row">                              
+            <div class="form-col">
+              <label for="">
+                  Business Type
+              </label>
+              <div class="form-holder">
+                <i class="zmdi zmdi-store"></i>
+                <select name="" id="" class="form-control">
+                  <option value="monthly" class="option">Antiques</option>
+                  <option value="yearly" class="option">Apparel/Clothing</option>
+                  <option value="yearly" class="option">Appliances</option>
+                  <option value="monthly" class="option">Arts & Crafts</option>
+                  <option value="yearly" class="option">Automotives/Vehicles</option>
+                  <option value="yearly" class="option">Beauty&Health</option>
+                  <option value="monthly" class="option">Books</option>
+                  <option value="yearly" class="option">Electronics</option>
+                  <option value="yearly" class="option">Farm&Garden</option>
+                  <option value="monthly" class="option">Financial</option>
+                  <option value="yearly" class="option">Electronics</option>
+                  <option value="yearly" class="option">Lessons</option>
+                  <option value="monthly" class="option">Photo&Video</option>
+                  <option value="yearly" class="option">Professional Services</option>
+                  <option value="yearly" class="option">Skilled Services</option>
+                  <option value="monthly" class="option">Therapeutic</option>
+                  <option value="yearly" class="option">Travel/Vacation</option>
+                </select>
+                <i class="zmdi zmdi-chevron-down"></i>
+              </div>
+            </div>  
+            <div class="form-col">
+              <label for="">
+                  Discount Offer
+              </label>
+              <div class="form-holder">
+                <i class="zmdi zmdi-money-box"></i>
+                <input type="number" placeholder="Input 1-100" min="1" max="100"class="form-control" />
+              </div>
+            </div>  
+          </div>    
+
+          <div class="form-row">            
+            <label for="">
+              <input type="checkbox" id="agreement-checkbox" />
+              <h4>Discount selected will be applied to <b>all</b> products and services of the store. Otherwise, please indicate excluded items below.</h4>
+            </label>
+          </div>  
+          <div class="form-row">  
+            <div class ="form-col">
+              <label for="">
+                  Goods and Services Exclusions
+              </label>
+              <div class="form-holder">
+                <i class="zmdi zmdi-block"></i>
+                <input type="text" class="form-control" />  
+              </div>
+            </div>                      
+          </div>          
         </section>
 
         <!-- Payment Method Section -->
@@ -265,9 +322,7 @@
               <div class="form-holder">
                 <i class="zmdi zmdi-card"></i>
                 <select name="" id="" class="form-control">
-                  <option value="monthly" class="option"
-                    >American Express</option
-                  >
+                  <option value="monthly" class="option">American Express</option>
                   <option value="yearly" class="option">MasterCard</option>
                   <option value="yearly" class="option">Visa</option>
                 </select>
@@ -279,7 +334,7 @@
                 Card Number
               </label>
               <div class="form-holder">
-                <i class="zmdi zmdi-pin"></i>
+                <i class="zmdi zmdi-card"></i>
                 <input type="text" class="form-control" />
               </div>
             </div>
@@ -290,7 +345,7 @@
                 Expiration Date
               </label>
               <div class="form-holder">
-                <i class="zmdi zmdi-pin"></i>
+                <i class="zmdi zmdi-calendar"></i>
                 <input type="text" placeholder="MM/YY" class="form-control" />
               </div>
             </div>
@@ -299,7 +354,7 @@
                 CV Code
               </label>
               <div class="form-holder">
-                <i class="zmdi zmdi-pin"></i>
+                <i class="zmdi zmdi-card"></i>
                 <input type="text" placeholder="CVC" class="form-control" />
               </div>
             </div>
@@ -336,10 +391,10 @@
               <!-- </div> -->
 
               <label for="">
-                <h4>E-SIGNATURE</h4>
+                <h4>Vendor Authorized E-SIGNATURE</h4>
               </label>
               <div class="form-holder">
-                <i class="zmdi zmdi-pin"></i>
+                <i class="zmdi zmdi-account-circle"></i>
                 <input
                   type="text"
                   placeholder="Please type your full name"
