--- a/prototype/discounts.html
+++ b/prototype/discounts.html
@@ -330,6 +330,72 @@
         </div>
       </div>
     </div>
+    <!-- Footer -->
+    <section id="footer-form"></section>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 contact">
+            <div class="title">Contact</div>
+            <ul>
+              <li>
+                <i class="fas fa-phone-square"></i>
+                <a href="tel:020 7112 8223">020 7112 8223</a>
+              </li>
+              <li>
+                <i class="fas fa-envelope-square"></i>
+                <a href="mailto:saverscardllc@gmail.com"
+                  >saverscardllc@gmail.com</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <div class="title">Useful Information</div>
+            <ul>
+              <li>
+                <a href="">Terms & Conditions</a>
+              </li>
+              <li>
+                <a href="">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="">Cookie Policy</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <div class="title">Follow Us</div>
+            <div class="social">
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener nofollow"
+              >
+                <i class="fab fa-facebook-f"></i
+              ></a>
+              <a
+                href="https://www.twitter.com"
+                target="_blank"
+                rel="noopener nofollow"
+              >
+                <i class="fab fa-twitter"></i
+              ></a>
+              <a
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="noopener nofollow"
+              >
+                <i class="fab fa-instagram"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright text-center">
+        © 2019 saverscard.com All rights Reserved
+      </div>
+    </footer>
     <script
       async
       defer
