--- a/prototype/signup_store.html
+++ b/prototype/signup_store.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <form action="" id="wizard">
+      <form action="" id="wizard" class="store">
         <!-- Account Section  -->
         <h4></h4>
         <section>
@@ -233,20 +233,24 @@
         <!-- Discount Type Section -->
         <h4></h4>
         <section>
-          <h3>Discount Type</h3>        
-          <div class="form-row">                              
+          <h3>Discount Type</h3>
+          <div class="form-row">
             <div class="form-col">
               <label for="">
-                  Business Type
+                Business Type
               </label>
               <div class="form-holder">
                 <i class="zmdi zmdi-store"></i>
                 <select name="" id="" class="form-control">
                   <option value="monthly" class="option">Antiques</option>
-                  <option value="yearly" class="option">Apparel/Clothing</option>
+                  <option value="yearly" class="option"
+                    >Apparel/Clothing</option
+                  >
                   <option value="yearly" class="option">Appliances</option>
                   <option value="monthly" class="option">Arts & Crafts</option>
-                  <option value="yearly" class="option">Automotives/Vehicles</option>
+                  <option value="yearly" class="option"
+                    >Automotives/Vehicles</option
+                  >
                   <option value="yearly" class="option">Beauty&Health</option>
                   <option value="monthly" class="option">Books</option>
                   <option value="yearly" class="option">Electronics</option>
@@ -255,42 +259,56 @@
                   <option value="yearly" class="option">Electronics</option>
                   <option value="yearly" class="option">Lessons</option>
                   <option value="monthly" class="option">Photo&Video</option>
-                  <option value="yearly" class="option">Professional Services</option>
-                  <option value="yearly" class="option">Skilled Services</option>
+                  <option value="yearly" class="option"
+                    >Professional Services</option
+                  >
+                  <option value="yearly" class="option"
+                    >Skilled Services</option
+                  >
                   <option value="monthly" class="option">Therapeutic</option>
                   <option value="yearly" class="option">Travel/Vacation</option>
                 </select>
                 <i class="zmdi zmdi-chevron-down"></i>
               </div>
-            </div>  
+            </div>
             <div class="form-col">
               <label for="">
-                  Discount Offer
+                Discount Offer
               </label>
               <div class="form-holder">
                 <i class="zmdi zmdi-money-box"></i>
-                <input type="number" placeholder="Input 1-100" min="1" max="100"class="form-control" />
+                <input
+                  type="number"
+                  placeholder="Input 1-100"
+                  min="1"
+                  max="100"
+                  class="form-control"
+                />
               </div>
-            </div>  
-          </div>    
+            </div>
+          </div>
 
-          <div class="form-row">            
+          <div class="form-row">
             <label for="">
               <input type="checkbox" id="agreement-checkbox" />
-              <h4>Discount selected will be applied to <b>all</b> products and services of the store. Otherwise, please indicate excluded items below.</h4>
+              <h4>
+                Discount selected will be applied to <b>all</b> products and
+                services of the store. Otherwise, please indicate excluded items
+                below.
+              </h4>
             </label>
-          </div>  
-          <div class="form-row">  
-            <div class ="form-col">
+          </div>
+          <div class="form-row">
+            <div class="form-col">
               <label for="">
-                  Goods and Services Exclusions
+                Goods and Services Exclusions
               </label>
               <div class="form-holder">
                 <i class="zmdi zmdi-block"></i>
-                <input type="text" class="form-control" />  
+                <input type="text" class="form-control" />
               </div>
-            </div>                      
-          </div>          
+            </div>
+          </div>
         </section>
 
         <!-- Payment Method Section -->
@@ -322,7 +340,9 @@
               <div class="form-holder">
                 <i class="zmdi zmdi-card"></i>
                 <select name="" id="" class="form-control">
-                  <option value="monthly" class="option">American Express</option>
+                  <option value="monthly" class="option"
+                    >American Express</option
+                  >
                   <option value="yearly" class="option">MasterCard</option>
                   <option value="yearly" class="option">Visa</option>
                 </select>
