--- a/prototype/signup_user.html
+++ b/prototype/signup_user.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <form action="" id="wizard">
+      <form action="" id="wizard" class="user">
         <!-- Account Section  -->
         <h4></h4>
         <section>
