--- a/prototype/index.html
+++ b/prototype/index.html
@@ -47,10 +47,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="index.html">
-          <img src="img/logo.png" alt />
+          <img src="img/logo.png" width="100" height="100" alt="" />
         </a>
         <button
-          class="navbar-toggler navbar-toggler-right"
+          class="navbar-toggler"
           type="button"
           data-toggle="collapse"
           data-target="#navbarResponsive"
@@ -62,7 +62,7 @@
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav text-uppercase ml-auto">
+          <ul class="navbar-nav text-uppercase left">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services"
                 >Services</a
@@ -73,6 +73,14 @@
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
+          <ul class="navbar-nav text-uppercase right ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="">Log In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="">Sign Up</a>
             </li>
           </ul>
         </div>
@@ -428,8 +436,75 @@
           </div>
         </div>
       </div>
-      <br /><br /><br />
+      <br /><br /><br /><br />
     </section>
+
+    <!-- Footer -->
+    <section id="footer-form"></section>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 contact">
+            <div class="title">Contact</div>
+            <ul>
+              <li>
+                <i class="fas fa-phone-square"></i>
+                <a href="tel:020 7112 8223">020 7112 8223</a>
+              </li>
+              <li>
+                <i class="fas fa-envelope-square"></i>
+                <a href="mailto:saverscardllc@gmail.com"
+                  >saverscardllc@gmail.com</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <div class="title">Useful Information</div>
+            <ul>
+              <li>
+                <a href="">Terms & Conditions</a>
+              </li>
+              <li>
+                <a href="">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="">Cookie Policy</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <div class="title">Follow Us</div>
+            <div class="social">
+              <a
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="noopener nofollow"
+              >
+                <i class="fab fa-facebook-f"></i
+              ></a>
+              <a
+                href="https://www.twitter.com"
+                target="_blank"
+                rel="noopener nofollow"
+              >
+                <i class="fab fa-twitter"></i
+              ></a>
+              <a
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="noopener nofollow"
+              >
+                <i class="fab fa-instagram"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="copyright text-center">
+        © 2019 saverscard.com All rights Reserved
+      </div>
+    </footer>
 
     <!-- Footer -->
     <!-- <footer class="footer">
