--- a/prototype/discounts.html
+++ b/prototype/discounts.html
@@ -78,6 +78,7 @@
                   aria-expanded="false"
                 ></button>
                 <div
+                  id="settings"
                   class="dropdown-menu dropdown-menu-right"
                   aria-labelledby="dropdownMenu2"
                 >
