--- a/prototype/discounts.html
+++ b/prototype/discounts.html
@@ -85,7 +85,7 @@
                   <a class="dropdown-item">
                     Account Settings
                   </a>
-                  <div class="dropdown-divider"></div>
+                  <!-- <div class="dropdown-divider"></div> -->
                   <a class="dropdown-item" href="index.html">
                     Log out
                   </a>
@@ -163,12 +163,12 @@
               Sort By
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-              <button class="dropdown-item" type="button">Action</button>
+              <button class="dropdown-item" type="button">Store</button>
               <button class="dropdown-item" type="button">
-                Another action
+                Recently Added
               </button>
               <button class="dropdown-item" type="button">
-                Something else here
+                Discount
               </button>
             </div>
           </div>
