--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <title>React App</title>
 
     <link
-      href="http://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
     <link
