--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SaversCard</title>
+    <title>Saverscard - A smarter way to save</title>
 
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
